--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                   </ul>
                 </li>
 
-                <a href="/login/"
+                <a href="dist/index.html"
                   class="js-clone-nav btn btn-primary border-width-2 d-none d-lg-inline-block ov-fix"><span
                     class="mr-2 icon-lock_outline"></span>Log In</a>
                 
