--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <li class="pr-3 has-children">
                   <a>Register</a>
                   <ul class="dropdown">
-                    <li><a href="/employer/register/">Employer</a></li>
+                    <li><a href="profile copy.html">Employer</a></li>
                     <li><a href="/employee/register/">Employee</a></li>
                   </ul>
                 </li>
