--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
+<style>
+  .section-hero.inner-page, .section-hero.inner-page > .container > .row {
+    height: auto;
+    min-height: auto;
+    padding-top: 4em;
+    padding-bottom: 4em;
+}
+.bootstrap-select > .dropdown-toggle.bs-placeholder, .bootstrap-select > .dropdown-toggle.bs-placeholder:hover, .bootstrap-select > .dropdown-toggle.bs-placeholder:focus, .bootstrap-select > .dropdown-toggle.bs-placeholder:active {
+    color: #999;
+    background: white;
+}
+</style>
       <body id="top">
             <div id="overlayer"></div>
 <div class="loader">
@@ -28,6 +40,7 @@
     <span class="sr-only">Loading...</span>
   </div>
 </div>
+
 
 
 <div class="site-wrap">
@@ -100,10 +113,44 @@
       </div>
     </div>
   </div>
+  <div class="container">
+    <div class="row mb-5">
+      <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4 mb-lg-0">
+        <input type="text"  name="job_title_or_company_name" class="form-control form-control-lg" placeholder="Job title, Company...">
+      </div>
+      <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4 mb-lg-0">
+        <input type="text"  name="location" class="form-control form-control-lg" placeholder="Location">
+      </div>
+      <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4 mb-lg-0" style="">
+        <select  name="job_type" class="selectpicker" data-style="btn-white btn-lg" data-width="100%" data-live-search="true"
+          title="Select Job Type" style="background-color: white !important;">
+          <option value="1">Full Time</option>
+          <option value="2">Part Time</option>
+          <option value="3">Internship</option>
+        </select>
+      </div>
+      <div class="col-12 col-sm-6 col-md-6 col-lg-3 mb-4 mb-lg-0">
+        <button type="submit" class="btn btn-primary btn-lg btn-block text-white btn-search"><span
+            class="icon-search icon mr-2"></span>Search Job</button>
+      </div>
+    </div>
+  </div>
 </section>
 
 <section id="ajax_listing_paginattion" class="site-section services-section bg-light block__62849" id="next-section">
+ 
+ <div class="container">
+  <form method="GET" action="/result/" class="search-jobs-form">
+          
+
+
+
+  
+          </form>
+
+ </div>
   <div class="containers">
+
 
     <div class="cards">
 
