--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
         <span class="tag">Feature</span>
         <h2 class="title">Never miss your important meetings</h2>
         <p class="info">Elemenatary tracks all the events for the day as you scheduled and you will never have to worry.</p>
-       <a href="index - Copy.html"> <button class="button">
+      <div class="flexboxx">
+        <a href="index - Copy.html"> <button class="button">
           <span>Learn more</span>
           <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="none">
             <path d="M0 0h24v24H0V0z" fill="none" />
@@ -166,6 +167,15 @@
           </svg>
         </button>
       </a>
+
+      <dl class="details">
+        <div>
+          <dt>14 days left</dt>
+        </div>
+      </dl>
+      </div>
+
+ 
       </article>
       <article class="information [ card ]">
         <span class="tag">Feature</span>
