--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <link rel="stylesheet" href="/static/css/owl.carousel.min.css">
     <link rel="stylesheet" href="/static/css/animate.min.css">
     <link rel="stylesheet" href="/static/css/bootstrap-datepicker.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&family=Open+Sans&display=swap"
+      rel="stylesheet">
 
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="/static/css/style.css">
@@ -62,7 +66,7 @@
         <div class="site-logo col-6"><a href="/">DJobPortal</a></div>
         <nav class="mx-auto site-navigation">
           <ul class="site-menu js-clone-nav d-none d-xl-block ml-0 pl-0">
-            <li><a href="/" class="nav-link">Home</a></li>
+            <li><a href="home.html" class="nav-link">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="/jobs/">Job Listings</a></li>
             <li><a href="#">Contact</a></li>
@@ -140,13 +144,7 @@
 <section id="ajax_listing_paginattion" class="site-section services-section bg-light block__62849" id="next-section">
  
  <div class="container">
-  <form method="GET" action="/result/" class="search-jobs-form">
-          
 
-
-
-  
-          </form>
 
  </div>
   <div class="containers">
@@ -155,7 +153,7 @@
     <div class="cards">
 
       <article class="information [ card ]">
-        <span class="tag">Feature</span>
+        <span class="tag"><ion-icon name="person-add-outline"></ion-icon></span>
         <h2 class="title">Never miss your important meetings</h2>
         <p class="info">Elemenatary tracks all the events for the day as you scheduled and you will never have to worry.</p>
       <div class="flexboxx">
@@ -367,6 +365,8 @@
     <script src="/static/js/bootstrap-datepicker.js"></script>
     <script src="/static/js/bootstrap-select.min.js"></script>
     <script>window.CKEDITOR_BASEPATH = '/static/ckeditor/ckeditor/';</script> 
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
  
     <script src="/static/js/custom.js"></script>  
              
