--- a/home.html
+++ b/home.html
@@ -186,8 +186,7 @@
     </ul>
 </main>
 </section>
-
-<div class="container">
+<div class="container table-responsive">
     <table class="table table-bordered table-hover">
         <thead>
           <tr>
