--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     background: white;
 }
 </style>
+
+
       <body id="top">
             <div id="overlayer"></div>
 <div class="loader">
@@ -68,7 +70,7 @@
           <ul class="site-menu js-clone-nav d-none d-xl-block ml-0 pl-0">
             <li><a href="home.html" class="nav-link">Home</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="/jobs/">Job Listings</a></li>
+            <li><a href="index copy.html">Job Listings</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
@@ -371,4 +373,6 @@
     <script src="/static/js/custom.js"></script>  
              
       </body>
+
+
 </html>
